# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cfe_progmacro"
version = "0.1.0"
edition = "2021"


license = "GNU Affero General Public License v3.0"
readme = "README.md"
description = "Configurations and secrets defined in structs are automatically read from environment variables."
homepage = "https://github.com/doheide/conf_from_env"
repository = "https://github.com/doheide/conf_from_env"

[lib]
proc-macro = true

[dependencies]
dotenv = "0.15.0"

syn = "1.0.105"
quote = "1.0.21"


